make nsSMimeVerificationListener use threadsafe issupports to quiet some assertions, r=kaie, bug 379661, with comment from Kaie